force-app/main/default/objects/STUDENT__c/STUDENT__c.object-meta.xml
<CustomObject>
    <label>STUDENT</label>
    <nameField>
        <label>STUDENT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STUDENTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>