force-app/main/default/objects/STUDENT__c/fields/e_mail__c.field-meta.xml
<CustomField>
    <fullName>e_mail__c</fullName>
    <label>e mail</label>
    <type>Email</type>
</CustomField>